--- a/index.html
+++ b/index.html
@@ -38,18 +38,23 @@
             </li>
         </ul>
         </address>
+        <button class="open-menu-button" type="button">
+<svg class="adress-menu-button" height="24" width="24">
+    <use href="./images/icons.svg#icon-heroicons-solid_menu"/>
+</svg>
+        </button>
     </div>
     </header>
    <main>
     <!--Effective Solutions  -->
-    <section class="main-box">
+    <!-- <section class="main-box">
         <div class="container">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button class="main-button" type="button">Order Service</button>
     </div>
-    </section>
+    </section> -->
     <!-- Features -->
-    <section class="features-box">
+    <!-- <section class="features-box">
         <div class="container">
         <h2 class="visually-hidden">Features</h2>
         <ul class="features-list">
@@ -91,9 +96,9 @@
         </li>
         </ul>
     </div>
-    </section>
+    </section> -->
      <!-- Team -->
-    <section class="team-box">
+    <!-- <section class="team-box">
         <div class="container">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
@@ -295,9 +300,9 @@
             </li>
         </ul>
     </div>
-    </section>
+    </section> -->
     <!-- Portfolio -->
-    <section class="portfolio-box">
+    <!-- <section class="portfolio-box">
         <div class="container">
     <h2 class="portfolio-title">Our Portfolio</h2>
 <ul class="portfolio-list">
@@ -388,9 +393,9 @@
 </ul>
 </div>
     </section>
-   </main>
+   </main> -->
    <!-- Footer -->
-    <footer class="footer-box">
+    <!-- <footer class="footer-box">
         <div class="container footer-container">
         <div class="page-footer">
         <a class="footer-logo" href="./index.html">Web<span class="logo-tech-white">Studio</span></a>
@@ -460,9 +465,9 @@ name="email"
 </form>
     </div>
 </div>
-    </footer>
+    </footer> -->
     <!-- Modal -->
-    <div class="backdrop">
+    <!-- <div class="backdrop">
 <div class="modal">
 <button type="button" class="modal-close">
     <svg class="modal-close-icon" height="8" width="8">
@@ -520,9 +525,9 @@ name="user-comment"
 id="user-comment" 
 placeholder="Text input"
 ></textarea>
- </div>
+ </div> -->
  <!-- Checkbox -->
-<div class="footer-checkbox-box">
+<!-- <div class="footer-checkbox-box">
 <input 
 class="visually-hidden" 
 type="checkbox"
@@ -544,6 +549,6 @@ I accept the terms and conditions of the
 <button class="submit-button" type="submit">Send</button>
 </form>
 </div>
-    </div>
+    </div> -->
 </body>
 </html>
