--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </ul>
         </nav>
         <address class="contacts-item">
-            <ul class="header-list">
+            <ul class="address-list">
             <li>
                 <a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
@@ -38,7 +38,7 @@
             </li>
         </ul>
         </address>
-        <button class="open-menu-button" type="button">
+        <button class="open-menu-btn" type="button">
 <svg class="adress-menu-button" height="24" width="24">
     <use href="./images/icons.svg#icon-heroicons-solid_menu"/>
 </svg>
@@ -550,5 +550,73 @@ I accept the terms and conditions of the
 </form>
 </div>
     </div> -->
+
+    <!-- Menu -->
+  <div class="header-menu-box is-open">
+        <nav class="navigation-menu">
+            <div class="header-close-box">
+<button class="header-close-button" type="button">
+    <svg class="header-close-icon" height="8" width="8">
+        <use href="./images/icons.svg#icon-close-black"/>
+    </svg>
+</button>
+            </div>
+            <ul class="header-menu-list">
+                <li>
+                    <a class="header-menu-link header-menu-link-box" href="./index.html">Studio</a>
+                </li>
+                <li>
+                    <a class="header-menu-link" href="">Portfolio</a>
+                </li>
+                <li>
+                    <a class="header-menu-link" href="">Contacts</a>
+                </li>
+            </ul>
+        </nav>
+        <address class="address-menu">
+            <ul class="address-menu-list">
+            <li>
+                <a class="contacts-menu" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a class="contacts-menu" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+        </ul>
+
+        <ul class="header-list-icon">
+            <li class="footer-icon">
+              <a class="footer-link" href="">
+                <svg class="footer-icon" height="24" width="24">
+                  <use
+                    class="footer-wrap"
+                    href="./images/icons.svg#icon-instagram"
+                  />
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon">
+              <a class="footer-link" href="">
+                <svg class="footer-icon" height="24" width="24">
+                  <use href="./images/icons.svg#icon-twitter" />
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon">
+              <a class="footer-link" href="">
+                <svg class="footer-icon" height="24" width="24">
+                  <use href="./images/icons.svg#icon-facebook" />
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon">
+              <a class="footer-link" href="">
+                <svg class="footer-icon" height="24" width="24">
+                  <use href="./images/icons.svg#icon-linkedin" />
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </address>
+    </div>
 </body>
 </html>
