--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@ I accept the terms and conditions of the
     </div> -->
 
     <!-- Menu -->
-  <div class="header-menu-box is-open">
+  <div class="header-menu-box">
         <nav class="navigation-menu">
             <div class="header-close-box">
 <button class="header-close-button" type="button">
@@ -584,7 +584,7 @@ I accept the terms and conditions of the
         </ul>
 
         <ul class="header-list-icon">
-            <li class="footer-icon">
+            <li class="footer-item">
               <a class="footer-link" href="">
                 <svg class="footer-icon" height="24" width="24">
                   <use
@@ -594,21 +594,21 @@ I accept the terms and conditions of the
                 </svg>
               </a>
             </li>
-            <li class="footer-icon">
+            <li class="footer-item">
               <a class="footer-link" href="">
                 <svg class="footer-icon" height="24" width="24">
                   <use href="./images/icons.svg#icon-twitter" />
                 </svg>
               </a>
             </li>
-            <li class="footer-icon">
+            <li class="footer-item">
               <a class="footer-link" href="">
                 <svg class="footer-icon" height="24" width="24">
                   <use href="./images/icons.svg#icon-facebook" />
                 </svg>
               </a>
             </li>
-            <li class="footer-icon">
+            <li class="footer-item">
               <a class="footer-link" href="">
                 <svg class="footer-icon" height="24" width="24">
                   <use href="./images/icons.svg#icon-linkedin" />
