fix header, section hero

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
     </div>
     </header>
    <main>
-    <!--Effective Solutions  -->
-    <!-- <section class="main-box">
-        <div class="container">
+    <!-- Effective Solutions  -->
+    <section class="main-box">
+        <div class="container hero-container">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button class="main-button" type="button">Order Service</button>
     </div>
-    </section> -->
+    </section>
     <!-- Features -->
     <!-- <section class="features-box">
         <div class="container">
