--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     </section>
     <!-- Features -->
-    <!-- <section class="features-box">
+    <section class="features-box">
         <div class="container">
         <h2 class="visually-hidden">Features</h2>
         <ul class="features-list">
@@ -96,7 +96,7 @@
         </li>
         </ul>
     </div>
-    </section> -->
+    </section>
      <!-- Team -->
     <!-- <section class="team-box">
         <div class="container">
