--- a/index.html
+++ b/index.html
@@ -98,12 +98,17 @@
     </div>
     </section>
      <!-- Team -->
-    <!-- <section class="team-box">
+    <section class="team-box">
         <div class="container">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
             <li class="team-item">
-                <img src="./images/img-3.jpg" alt="foto1" width="264">
+                <img 
+                class="team-images"
+                srcset="./images/mark-guerrero-tab-1x.jpg 1x, ./images/mark-guerrero-tab-2x.jpg 2x"
+                src="./images/img-3.jpg" 
+                alt="foto1" 
+                width="264">
                 <div class="team-container">
                <h3 class="team-name">Mark Guerrero</h3>
                <p class="team-profession">Product Designer</p>
@@ -152,7 +157,12 @@
             </div>
             </li>
             <li class="team-item">
-                <img src="./images/img-2.jpg" alt="foto2" width="264">
+                <img 
+                class="team-images"
+                srcset="./images/tom-ford-tab-1x.jpg 1x, ./images/tom-ford-tab-2x.jpg 2x"
+                src="./images/img-2.jpg" 
+                alt="foto2" 
+                width="264">
                 <div class="team-container">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-profession">Frontend Developer</p>
@@ -201,7 +211,12 @@
             </div>
             </li>
             <li class="team-item">
-                <img src="./images/img-1.jpg" alt="foto3" width="264">
+                <img 
+                class="team-images"
+                srcset="./images/camila-garcia-tab-1x.jpg 1x, ./images/camila-garcia-tab-2x.jpg 2x"
+                src="./images/img-1.jpg" 
+                alt="foto3" 
+                width="264">
                 <div class="team-container">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-profession">Marketing</p>
@@ -250,7 +265,12 @@
             </div>
             </li>
             <li class="team-item"> 
-                <img src="./images/img.jpg" alt="foto4" width="264">
+                <img 
+                class="team-images"
+                srcset="./images/daniel-wilson-tab-1x.jpg 1x, ./images/daniel-wilson-tab-2x.jpg 2x"
+                src="./images/img.jpg" 
+                alt="foto4" 
+                width="264">
                <div class="team-container">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-profession">UI Designer</p>
@@ -300,7 +320,7 @@
             </li>
         </ul>
     </div>
-    </section> -->
+    </section>
     <!-- Portfolio -->
     <!-- <section class="portfolio-box">
         <div class="container">
