--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </section>
      <!-- Team -->
     <section class="team-box">
-        <div class="container">
+        <div class="container team-container-box">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
             <li class="team-item">
@@ -322,13 +322,17 @@
     </div>
     </section>
     <!-- Portfolio -->
-    <!-- <section class="portfolio-box">
-        <div class="container">
+    <section class="portfolio-box">
+        <div class="container portfolio-container-box">
     <h2 class="portfolio-title">Our Portfolio</h2>
 <ul class="portfolio-list">
     <li class="portfolio-item">
         <div class="portfolio-wrap">
-<img src="./images/portfolio6.jpg" alt="banking" width="360">
+<img 
+srcset="./images/portfolio6.jpg 1x, ./images/banking-app-desk-2x.jpg 2x"
+src="./images/portfolio6.jpg" 
+alt="banking" 
+width="360">
 <p class="portfolio-text">
     14 Stylish and User-Friendly App Design Concepts · Task
     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -342,7 +346,11 @@
     </li>
     <li class="portfolio-item">
 <div class="portfolio-wrap">
-        <img src="./images/portfolio5.jpg" alt="cashless" width="360">
+        <img 
+        srcset="./images/portfolio5.jpg 1x, ./images/cashless-payment-desk-2x.jpg 2x"
+        src="./images/portfolio5.jpg" 
+        alt="cashless" 
+        width="360">
         <p class="portfolio-text">
             14 Stylish and User-Friendly App Design Concepts · Task
     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -356,7 +364,11 @@
     </li>
     <li class="portfolio-item">
         <div class="portfolio-wrap">
-<img src="./images/portfolio4.jpg" alt="meditation" width="360">
+<img 
+srcset="./images/portfolio4.jpg 1x, ./images/meditation-app-desk-2x.jpg 2x"
+src="./images/portfolio4.jpg" 
+alt="meditation" 
+width="360">
 <p class="portfolio-text">
     14 Stylish and User-Friendly App Design Concepts · Task
     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -370,7 +382,11 @@
     </li>
     <li class="portfolio-item">
         <div class="portfolio-wrap">
-<img src="./images/portfolio3.jpg" alt="taxi" width="360">
+<img
+srcset="./images/portfolio3.jpg 1x, ./images/taxi-service-desk-2x.jpg 2x" 
+src="./images/portfolio3.jpg" 
+alt="taxi" 
+width="360">
 <p class="portfolio-text">
     14 Stylish and User-Friendly App Design Concepts · Task
     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -384,7 +400,11 @@
     </li>
     <li class="portfolio-item">
 <div class="portfolio-wrap">
-<img src="./images/portfolio2.jpg" alt="illustrations" width="360">
+<img 
+srcset="./images/portfolio2.jpg 1x, ./images/screen-illustrations-desk-2x.jpg 2x"
+src="./images/portfolio2.jpg" 
+alt="illustrations" 
+width="360">
 <p class="portfolio-text">
     14 Stylish and User-Friendly App Design Concepts · Task
     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -398,7 +418,11 @@
     </li>
     <li class="portfolio-item">
 <div class="portfolio-wrap">
-<img src="./images/portfolio1.jpg" alt="courses" width="360">
+<img 
+srcset="./images/portfolio1.jpg 1x, ./images/online-courses-desk-2x.jpg 2x"
+src="./images/portfolio1.jpg" 
+alt="courses" 
+width="360">
 <p class="portfolio-text">
     14 Stylish and User-Friendly App Design Concepts · Task
     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -413,7 +437,7 @@
 </ul>
 </div>
     </section>
-   </main> -->
+   </main>
    <!-- Footer -->
     <!-- <footer class="footer-box">
         <div class="container footer-container">
