--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
     <li class="portfolio-item">
         <div class="portfolio-wrap">
 <img 
+class="portfolio-img"
 srcset="./images/portfolio6.jpg 1x, ./images/banking-app-desk-2x.jpg 2x"
 src="./images/portfolio6.jpg" 
 alt="banking" 
@@ -347,6 +348,7 @@ width="360">
     <li class="portfolio-item">
 <div class="portfolio-wrap">
         <img 
+        class="portfolio-img"
         srcset="./images/portfolio5.jpg 1x, ./images/cashless-payment-desk-2x.jpg 2x"
         src="./images/portfolio5.jpg" 
         alt="cashless" 
@@ -365,6 +367,7 @@ width="360">
     <li class="portfolio-item">
         <div class="portfolio-wrap">
 <img 
+class="portfolio-img"
 srcset="./images/portfolio4.jpg 1x, ./images/meditation-app-desk-2x.jpg 2x"
 src="./images/portfolio4.jpg" 
 alt="meditation" 
@@ -383,7 +386,8 @@ width="360">
     <li class="portfolio-item">
         <div class="portfolio-wrap">
 <img
-srcset="./images/portfolio3.jpg 1x, ./images/taxi-service-desk-2x.jpg 2x" 
+class="portfolio-img"
+srcset="./images/portfolio3.jpg 1x, ./images/taxi-service-2x.jpg 2x" 
 src="./images/portfolio3.jpg" 
 alt="taxi" 
 width="360">
@@ -401,6 +405,7 @@ width="360">
     <li class="portfolio-item">
 <div class="portfolio-wrap">
 <img 
+class="portfolio-img"
 srcset="./images/portfolio2.jpg 1x, ./images/screen-illustrations-desk-2x.jpg 2x"
 src="./images/portfolio2.jpg" 
 alt="illustrations" 
@@ -419,6 +424,7 @@ width="360">
     <li class="portfolio-item">
 <div class="portfolio-wrap">
 <img 
+class="portfolio-img"
 srcset="./images/portfolio1.jpg 1x, ./images/online-courses-desk-2x.jpg 2x"
 src="./images/portfolio1.jpg" 
 alt="courses" 
