--- a/index.html
+++ b/index.html
@@ -328,12 +328,12 @@
 <ul class="portfolio-list">
     <li class="portfolio-item">
         <div class="portfolio-wrap">
-<img 
-class="portfolio-img"
-srcset="./images/portfolio6.jpg 1x, ./images/banking-app-desk-2x.jpg 2x"
-src="./images/portfolio6.jpg" 
-alt="banking" 
-width="360">
+            <picture>
+                <source srcset="./images/portfolio6.jpg 1x, ./images/banking-app-desk-2x.jpg 2x" media="(min-width: 1158px)"/>
+                    <source srcset="./images/banking-app-tab-1x.jpg 1x, ./images/banking-app-tab-2x.jpg 2x"
+                        media="(min-width: 768px)"/>
+                        <img src="./images/portfolio6.jpg" alt="banking" width="360" height="300" />
+            </picture>
 <p class="portfolio-text">
     14 Stylish and User-Friendly App Design Concepts · Task
     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -347,12 +347,18 @@ width="360">
     </li>
     <li class="portfolio-item">
 <div class="portfolio-wrap">
-        <img 
+    <picture>
+        <source srcset="./images/portfolio5.jpg 1x, ./images/cashless-payment-desk-2x.jpg 2x" media="(min-width: 1158px)"/>
+            <source srcset="./images/cashless-payment-tab-1x.jpg 1x, ./images/cashless-payment-tab-2x.jpg 2x"
+                media="(min-width: 768px)"/>
+                <img src="./images/portfolio5.jpg" alt="cashless" width="360" height="300" />
+    </picture>
+        <!-- <img 
         class="portfolio-img"
         srcset="./images/portfolio5.jpg 1x, ./images/cashless-payment-desk-2x.jpg 2x"
         src="./images/portfolio5.jpg" 
         alt="cashless" 
-        width="360">
+        width="360"> -->
         <p class="portfolio-text">
             14 Stylish and User-Friendly App Design Concepts · Task
     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -366,12 +372,14 @@ width="360">
     </li>
     <li class="portfolio-item">
         <div class="portfolio-wrap">
-<img 
-class="portfolio-img"
-srcset="./images/portfolio4.jpg 1x, ./images/meditation-app-desk-2x.jpg 2x"
-src="./images/portfolio4.jpg" 
-alt="meditation" 
-width="360">
+            <picture>
+                <source srcset="./images/portfolio4.jpg 1x, ./images/meditation-app-desk-2x.jpg 2x" media="(min-width: 1158px)"/>
+                    <source srcset="./images/meditation-app-tab-1x.jpg 1x, ./images/meditation-app-tab-2x.jpg 2x"
+                        media="(min-width: 768px)"/>
+                         <source srcset="./images/meditation-app-mob-1x.jpg 1x, ./images/meditation-app-mob-2x.jpg 2x"
+                        media="(min-width: 320px)"/>
+                        <img src="./images/portfolio4.jpg" alt="meditation" width="360" height="300" />
+            </picture>
 <p class="portfolio-text">
     14 Stylish and User-Friendly App Design Concepts · Task
     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -385,12 +393,12 @@ width="360">
     </li>
     <li class="portfolio-item">
         <div class="portfolio-wrap">
-<img
-class="portfolio-img"
-srcset="./images/portfolio3.jpg 1x, ./images/taxi-service-2x.jpg 2x" 
-src="./images/portfolio3.jpg" 
-alt="taxi" 
-width="360">
+            <picture>
+                <source srcset="./images/portfolio3.jpg 1x, ./images/taxi-service-2x.jpg 2x" media="(min-width: 1158px)"/>
+                    <source srcset="./images/taxi-service-tab-1x.jpg 1x, ./images/taxi-service-tab-2x.jpg 2x"
+                        media="(min-width: 768px)"/>
+                        <img src="./images/portfolio3.jpg" alt="taxi" width="360" height="300" />
+            </picture>
 <p class="portfolio-text">
     14 Stylish and User-Friendly App Design Concepts · Task
     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -404,12 +412,12 @@ width="360">
     </li>
     <li class="portfolio-item">
 <div class="portfolio-wrap">
-<img 
-class="portfolio-img"
-srcset="./images/portfolio2.jpg 1x, ./images/screen-illustrations-desk-2x.jpg 2x"
-src="./images/portfolio2.jpg" 
-alt="illustrations" 
-width="360">
+    <picture>
+        <source srcset="./images/portfolio2.jpg 1x, ./images/screen-illustrations-desk-2x.jpg 2x" media="(min-width: 1158px)"/>
+            <source srcset="./images/screen-illustrations-tab-1x.jpg 1x, ./images/screen-illustrations-tab-2x.jpg 2x"
+                media="(min-width: 768px)"/>
+                <img src="./images/portfolio2.jpg" alt="illustrations" width="360" height="300" />
+    </picture>
 <p class="portfolio-text">
     14 Stylish and User-Friendly App Design Concepts · Task
     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -423,12 +431,12 @@ width="360">
     </li>
     <li class="portfolio-item">
 <div class="portfolio-wrap">
-<img 
-class="portfolio-img"
-srcset="./images/portfolio1.jpg 1x, ./images/online-courses-desk-2x.jpg 2x"
-src="./images/portfolio1.jpg" 
-alt="courses" 
-width="360">
+    <picture>
+        <source srcset="./images/portfolio1.jpg 1x, ./images/online-courses-desk-2x.jpg 2x" media="(min-width: 1158px)"/>
+            <source srcset="./images/online-courses-tab-1x.jpg 1x, ./images/online-courses-tab-2x.jpg 2x"
+                media="(min-width: 768px)"/>
+                <img src="./images/portfolio1.jpg" alt="courses" width="360" height="300" />
+    </picture>
 <p class="portfolio-text">
     14 Stylish and User-Friendly App Design Concepts · Task
     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
