--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
     </section>
    </main>
    <!-- Footer -->
-    <!-- <footer class="footer-box">
+    <footer class="footer-box">
         <div class="container footer-container">
         <div class="page-footer">
         <a class="footer-logo" href="./index.html">Web<span class="logo-tech-white">Studio</span></a>
@@ -523,7 +523,7 @@ name="email"
 </form>
     </div>
 </div>
-    </footer> -->
+    </footer>
     <!-- Modal -->
     <!-- <div class="backdrop">
 <div class="modal">
