--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@ name="email"
 </div>
     </footer>
     <!-- Modal -->
-    <!-- <div class="backdrop">
+    <div class="backdrop">
 <div class="modal">
 <button type="button" class="modal-close">
     <svg class="modal-close-icon" height="8" width="8">
@@ -583,9 +583,9 @@ name="user-comment"
 id="user-comment" 
 placeholder="Text input"
 ></textarea>
- </div> -->
+ </div>
  <!-- Checkbox -->
-<!-- <div class="footer-checkbox-box">
+<div class="footer-checkbox-box">
 <input 
 class="visually-hidden" 
 type="checkbox"
@@ -607,7 +607,7 @@ I accept the terms and conditions of the
 <button class="submit-button" type="submit">Send</button>
 </form>
 </div>
-    </div> -->
+    </div>
 
     <!-- Menu -->
   <div class="header-menu-box">
