--- a/index.html
+++ b/index.html
@@ -634,10 +634,10 @@ I accept the terms and conditions of the
         <address class="address-menu">
             <ul class="address-menu-list">
             <li>
-                <a class="contacts-menu" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="contacts-menu contacts-menu-box" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
             <li>
-                <a class="contacts-menu" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <a class="contacts-menu" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
         </ul>
 
